--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -157,6 +157,7 @@
         "        return arr\n",
         "\n",
         "    results = extract(obj, arr)\n",
+        "\n",
         "    return modal, past, noun # result"
       ],
       "execution_count": 0,
@@ -231,21 +232,17 @@
         "                if nm in md:   \n",
         "                  nounm.append(nm)\n",
         "                  nouns.remove(nm)\n",
-        "\n",
+        "             \n",
         "              for p in pas:\n",
         "                pa = simplify(p)\n",
-        "\n",
+        "      \n",
         "                if pa in md and len(md) > len(pa):\n",
-        "                   if md.index(pa) > 0 :\n",
-        "                     md = md[0:md.index(pa)]\n",
-        "                   else:\n",
-        "                     md = str(md).replace(str(pa),'')   \n",
+        "                   if md.index(pa) == 0 :\n",
+        "                     md = md.replace(pa,'')   \n",
         "                if md in pa and len(pa) > len(md):\n",
-        "                   if pa.index(md) > 0 :\n",
-        "                     pa = pa[0:pa.index(md)]  \n",
-        "                   else:\n",
-        "                     pa = str(pa).replace(str(md),'')  \n",
-        "                for np in reversed(sorted(nouns,key=len)):  \n",
+        "                   if pa.index(md) == 0 :\n",
+        "                     pa = pa.replace(md,'')  \n",
+        "                for np in reversed(sorted(nounp,key=len)):\n",
         "                  if np in pa and len(pa) > len(np): \n",
         "                    if pa.index(np) > 0 :\n",
         "                      pa = pa[0:pa.index(np)]\n",
@@ -253,12 +250,12 @@
         "                      pa = str(pa).replace(str(np),'')  \n",
         "                    nounp.append(np)\n",
         "                    nouns.remove(np)\n",
-        "                if md in pa:\n",
+        "                if md in pa: # and len(pa) > len(md): # dont uncomment!\n",
         "                   if pa.index(md) > 0 :\n",
         "                     pa = pa[0:pa.index(md)]  \n",
         "                   else:\n",
         "                     pa = str(pa).replace(str(md),'')      \n",
-        "\n",
+        "                \n",
         "                if pa not in past:\n",
         "                  past.append(pa) \n",
         "              if md not in modal:        \n",
@@ -266,7 +263,7 @@
         "                \n",
         "              for p1 in past:\n",
         "                for p2 in past:\n",
-        "                  if p2 in p1:\n",
+        "                  if p2 in p1 and len(p1) > len(p2):\n",
         "                    past.remove(p2) \n",
         "              \n",
         "            return modal, past, nouns, nounm, nounp"
@@ -299,8 +296,12 @@
         "        if len(sentence.intersection(words)) < len(words):\n",
         "          sentence.update(words)\n",
         "          gist.extend(phrase)\n",
-        "  #print(gist)\n",
-        "  return ' '.join(map(str, gist))"
+        "  result = str()\n",
+        "  for word in gist:\n",
+        "    if word != '\\'ve' and word != 'n\\'t': # all exceptions\n",
+        "      result = result + ' '\n",
+        "    result = result + word  \n",
+        "  return result"
       ],
       "execution_count": 0,
       "outputs": []
@@ -309,23 +310,24 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "72f60299-bad4-47a8-aebd-c0d6d44eadd3",
+        "outputId": "1fa97e20-1b5b-4cbb-d6ca-0775a5e185fa",
         "id": "mU94XoTgLOhu",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 179
+          "height": 215
         }
       },
       "source": [
         "import nltk\n",
         "nltk.download('punkt')\n",
         "\n",
-        "text = \"67% of the embryos exposed to CRISPR-cas9 had only the correct version of the gene - higher than the 50% that would have been expected had the technique not been used.\"\n",
+        "text = \"These distortions have seen one party or the other get shut out of general elections in recent years, including in contests they likely would have won if the parties had gotten to nominate a single candidate each.\"\n",
         "text.replace('\\\"','\\'')\n",
         "#print(text)\n",
         "\n",
         "prediction = predictor.predict(sentence=text)\n",
         "modal, past, nouns, nounm, nounp = extract_constituents()\n",
+        "print(nouns)\n",
         "print(nounm)\n",
         "print(modal)\n",
         "print(past)\n",
@@ -339,9 +341,10 @@
         "  for m in modal:\n",
         "    if len(m) > mindex and m in text :\n",
         "      pindex = text.index(m)\n",
+        "      mindex = text.index(m)\n",
         "      length = len(m)\n",
         "\n",
-        "    for n in nounp:\n",
+        "    for n in nounm:\n",
         "      if mindex > text.index(n):\n",
         "        mindex = text.index(n)  \n",
         "\n",
@@ -357,7 +360,7 @@
         "      mindex = text.index(p)\n",
         "      length = len(p) \n",
         "\n",
-        "    for n in nounm:\n",
+        "    for n in nounp:\n",
         "      if mindex > text.index(n):\n",
         "        mindex = text.index(n)\n",
         "      \n",
@@ -366,19 +369,21 @@
         "  print(mindex,pindex,length)\n",
         "\n"
       ],
-      "execution_count": 147,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
-            "['the technique']\n",
-            "['would have been expected ']\n",
-            "['had the technique not been used']\n",
-            "['only the correct version of the gene']\n",
-            "67% of the embryos exposed to CRISPR-cas9 had only the correct version of the gene - higher than the 50% that would have been expected \n",
-            "had the technique not been used\n"
+            "[[{'word': 'would', 'nodeType': 'MD', 'attributes': ['MD'], 'link': 'MD'}, {'word': 'have won if the parties had gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'have', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'won', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'if the parties had gotten to nominate a single candidate each', 'nodeType': 'SBAR', 'attributes': ['SBAR'], 'link': 'SBAR', 'children': [{'word': 'if', 'nodeType': 'IN', 'attributes': ['IN'], 'link': 'IN'}, {'word': 'the parties had gotten to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'the parties', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'the', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'parties', 'nodeType': 'NNS', 'attributes': ['NNS'], 'link': 'NNS'}]}, {'word': 'had gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'had', 'nodeType': 'VBD', 'attributes': ['VBD'], 'link': 'VBD'}, {'word': 'gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'gotten', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'to', 'nodeType': 'TO', 'attributes': ['TO'], 'link': 'TO'}, {'word': 'nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'nominate', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'a single candidate each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a single candidate', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'single', 'nodeType': 'JJ', 'attributes': ['JJ'], 'link': 'JJ'}, {'word': 'candidate', 'nodeType': 'NN', 'attributes': ['NN'], 'link': 'NN'}]}, {'word': 'each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'each', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}]}]}]}]}]}]}]}]}]}]}], [{'word': 'if', 'nodeType': 'IN', 'attributes': ['IN'], 'link': 'IN'}, {'word': 'the parties had gotten to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'the parties', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'the', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'parties', 'nodeType': 'NNS', 'attributes': ['NNS'], 'link': 'NNS'}]}, {'word': 'had gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'had', 'nodeType': 'VBD', 'attributes': ['VBD'], 'link': 'VBD'}, {'word': 'gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'gotten', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'to', 'nodeType': 'TO', 'attributes': ['TO'], 'link': 'TO'}, {'word': 'nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'nominate', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'a single candidate each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a single candidate', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'single', 'nodeType': 'JJ', 'attributes': ['JJ'], 'link': 'JJ'}, {'word': 'candidate', 'nodeType': 'NN', 'attributes': ['NN'], 'link': 'NN'}]}, {'word': 'each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'each', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}]}]}]}]}]}]}]}]}], [{'word': 'had', 'nodeType': 'VBD', 'attributes': ['VBD'], 'link': 'VBD'}, {'word': 'gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'gotten', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'to', 'nodeType': 'TO', 'attributes': ['TO'], 'link': 'TO'}, {'word': 'nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'nominate', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'a single candidate each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a single candidate', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'single', 'nodeType': 'JJ', 'attributes': ['JJ'], 'link': 'JJ'}, {'word': 'candidate', 'nodeType': 'NN', 'attributes': ['NN'], 'link': 'NN'}]}, {'word': 'each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'each', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}]}]}]}]}]}]}]]\n",
+            "[' These distortions', ' one party or the other', ' one party', ' the other', ' general elections', ' recent years', ' contests they likely would have won if the parties had gotten to nominate a single candidate each', ' contests', ' they']\n",
+            "[' a single candidate each', ' a single candidate', ' the parties', ' each']\n",
+            "[' would have won if the parties had gotten to nominate a single candidate each']\n",
+            "[' if the parties had gotten to nominate a single candidate each']\n",
+            "[]\n",
+            " would have won if the parties had gotten to nominate a single candidate each\n",
+            " if the parties had gotten to nominate a single candidate each\n"
           ],
           "name": "stdout"
         }
@@ -430,8 +435,13 @@
         "  try : \n",
         "    for m in modal:\n",
         "      if len(m) > mindex and m in text :\n",
+        "        pindex = text.index(m)\n",
         "        mindex = text.index(m)\n",
         "        length = len(m)\n",
+        "\n",
+        "      for n in nounm:\n",
+        "        if mindex > text.index(n):\n",
+        "          mindex = text.index(n) \n",
         "\n",
         "    test_df['consequent'][ind]=text[mindex:mindex+length]\n",
         "\n",
