prepare tran.tsv
Was used to prepare tran.tsv

--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -41,21 +41,21 @@
         "import pandas as pd\n",
         "\n",
         "prefix = '/content/'\n",
-        "test_df = pd.read_csv(prefix + 'test.csv', header=None)\n",
-        "test_df=test_df.drop(index=0)\n",
+        "train_df = pd.read_csv(prefix + 'train.csv', header=None)\n",
+        "train_df=train_df.drop(index=0)\n",
         "\n",
-        "test_df = pd.DataFrame({\n",
-        "    'id':test_df[0],\n",
-        "    'text': test_df[1].replace(r'\\n', ' ', regex=True),\n",
-        "    'past':''*test_df.shape[1],\n",
-        "    'modal':''*test_df.shape[1],\n",
-        "    'antecedent':''*test_df.shape[1],\n",
-        "    'consequent':''*test_df.shape[1]\n",
+        "train_df = pd.DataFrame({\n",
+        "    'id':train_df[0],\n",
+        "    'text': train_df[1].replace(r'\\n', ' ', regex=True),\n",
+        "    'past':''*train_df.shape[1],\n",
+        "    'modal':''*train_df.shape[1],\n",
+        "    'antecedent':''*train_df.shape[1],\n",
+        "    'consequent':''*train_df.shape[1]\n",
         "})\n",
         "\n",
         "  \n",
         "# display \n",
-        "test_df.head()"
+        "train_df.head()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -310,18 +310,14 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "1fa97e20-1b5b-4cbb-d6ca-0775a5e185fa",
         "id": "mU94XoTgLOhu",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 215
-        }
+        "colab": {}
       },
       "source": [
         "import nltk\n",
         "nltk.download('punkt')\n",
         "\n",
-        "text = \"These distortions have seen one party or the other get shut out of general elections in recent years, including in contests they likely would have won if the parties had gotten to nominate a single candidate each.\"\n",
+        "text = \"These distortions have seen one party or the other get shut out of general elections in recent years, including in contrains they likely would have won if the parties had gotten to nominate a single candidate each.\"\n",
         "text.replace('\\\"','\\'')\n",
         "#print(text)\n",
         "\n",
@@ -370,24 +366,7 @@
         "\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[[{'word': 'would', 'nodeType': 'MD', 'attributes': ['MD'], 'link': 'MD'}, {'word': 'have won if the parties had gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'have', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'won', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'if the parties had gotten to nominate a single candidate each', 'nodeType': 'SBAR', 'attributes': ['SBAR'], 'link': 'SBAR', 'children': [{'word': 'if', 'nodeType': 'IN', 'attributes': ['IN'], 'link': 'IN'}, {'word': 'the parties had gotten to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'the parties', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'the', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'parties', 'nodeType': 'NNS', 'attributes': ['NNS'], 'link': 'NNS'}]}, {'word': 'had gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'had', 'nodeType': 'VBD', 'attributes': ['VBD'], 'link': 'VBD'}, {'word': 'gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'gotten', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'to', 'nodeType': 'TO', 'attributes': ['TO'], 'link': 'TO'}, {'word': 'nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'nominate', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'a single candidate each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a single candidate', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'single', 'nodeType': 'JJ', 'attributes': ['JJ'], 'link': 'JJ'}, {'word': 'candidate', 'nodeType': 'NN', 'attributes': ['NN'], 'link': 'NN'}]}, {'word': 'each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'each', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}]}]}]}]}]}]}]}]}]}]}], [{'word': 'if', 'nodeType': 'IN', 'attributes': ['IN'], 'link': 'IN'}, {'word': 'the parties had gotten to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'the parties', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'the', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'parties', 'nodeType': 'NNS', 'attributes': ['NNS'], 'link': 'NNS'}]}, {'word': 'had gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'had', 'nodeType': 'VBD', 'attributes': ['VBD'], 'link': 'VBD'}, {'word': 'gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'gotten', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'to', 'nodeType': 'TO', 'attributes': ['TO'], 'link': 'TO'}, {'word': 'nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'nominate', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'a single candidate each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a single candidate', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'single', 'nodeType': 'JJ', 'attributes': ['JJ'], 'link': 'JJ'}, {'word': 'candidate', 'nodeType': 'NN', 'attributes': ['NN'], 'link': 'NN'}]}, {'word': 'each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'each', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}]}]}]}]}]}]}]}]}], [{'word': 'had', 'nodeType': 'VBD', 'attributes': ['VBD'], 'link': 'VBD'}, {'word': 'gotten to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'gotten', 'nodeType': 'VBN', 'attributes': ['VBN'], 'link': 'VBN'}, {'word': 'to nominate a single candidate each', 'nodeType': 'S', 'attributes': ['S'], 'link': 'S', 'children': [{'word': 'to nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'to', 'nodeType': 'TO', 'attributes': ['TO'], 'link': 'TO'}, {'word': 'nominate a single candidate each', 'nodeType': 'VP', 'attributes': ['VP'], 'link': 'VP', 'children': [{'word': 'nominate', 'nodeType': 'VB', 'attributes': ['VB'], 'link': 'VB'}, {'word': 'a single candidate each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a single candidate', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'a', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}, {'word': 'single', 'nodeType': 'JJ', 'attributes': ['JJ'], 'link': 'JJ'}, {'word': 'candidate', 'nodeType': 'NN', 'attributes': ['NN'], 'link': 'NN'}]}, {'word': 'each', 'nodeType': 'NP', 'attributes': ['NP'], 'link': 'NP', 'children': [{'word': 'each', 'nodeType': 'DT', 'attributes': ['DT'], 'link': 'DT'}]}]}]}]}]}]}]]\n",
-            "[' These distortions', ' one party or the other', ' one party', ' the other', ' general elections', ' recent years', ' contests they likely would have won if the parties had gotten to nominate a single candidate each', ' contests', ' they']\n",
-            "[' a single candidate each', ' a single candidate', ' the parties', ' each']\n",
-            "[' would have won if the parties had gotten to nominate a single candidate each']\n",
-            "[' if the parties had gotten to nominate a single candidate each']\n",
-            "[]\n",
-            " would have won if the parties had gotten to nominate a single candidate each\n",
-            " if the parties had gotten to nominate a single candidate each\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -406,28 +385,28 @@
         "from time import sleep\n",
         "\n",
         "prefix = '/content/'\n",
-        "test_df = pd.read_csv(prefix + 'test.csv', header=None)\n",
-        "test_df = test_df.drop(index=0)\n",
+        "train_df = pd.read_csv(prefix + 'train.csv', header=None)\n",
+        "train_df = train_df.drop(index=0)\n",
         "  \n",
-        "test_df = pd.DataFrame({\n",
-        "    'id':test_df[0],\n",
-        "    'text': test_df[1].replace(r'\\n', ' ', regex=True),\n",
-        "    'past':''*test_df.shape[1],\n",
-        "    'modal':''*test_df.shape[1],\n",
-        "    'antecedent':''*test_df.shape[1],\n",
-        "    'consequent':''*test_df.shape[1]\n",
+        "train_df = pd.DataFrame({\n",
+        "    'id':train_df[0],\n",
+        "    'text': train_df[1].replace(r'\\n', ' ', regex=True),\n",
+        "    'past':''*train_df.shape[1],\n",
+        "    'modal':''*train_df.shape[1],\n",
+        "    'antecedent':''*train_df.shape[1],\n",
+        "    'consequent':''*train_df.shape[1]\n",
         "})\n",
         "\n",
-        "count = test_df['id'].count()\n",
+        "count = train_df['id'].count()\n",
         "print(count)\n",
         "\n",
-        "for ind in tqdm(test_df.index): \n",
-        "  prediction = predictor.predict(sentence=test_df['text'][ind])\n",
+        "for ind in tqdm(train_df.index): \n",
+        "  prediction = predictor.predict(sentence=train_df['text'][ind])\n",
         "  modal, past, nouns, nounm, nounp = extract_constituents()\n",
-        "  test_df['modal'][ind] = modal\n",
-        "  test_df['past'][ind] = past\n",
+        "  train_df['modal'][ind] = modal\n",
+        "  train_df['past'][ind] = past\n",
         "\n",
-        "  text = test_df['text'][ind]\n",
+        "  text = train_df['text'][ind]\n",
         "  mindex = int(0)\n",
         "  pindex = int(0)\n",
         "  length = int(0)\n",
@@ -443,7 +422,7 @@
         "        if mindex > text.index(n):\n",
         "          mindex = text.index(n) \n",
         "\n",
-        "    test_df['consequent'][ind]=text[mindex:mindex+length]\n",
+        "    train_df['consequent'][ind]=text[mindex:mindex+length]\n",
         "\n",
         "    mindex = int(0)\n",
         "    pindex = int(0)\n",
@@ -459,13 +438,13 @@
         "        if mindex > text.index(n):\n",
         "          mindex = text.index(n)\n",
         "        \n",
-        "    test_df['antecedent'][ind] = text[mindex:pindex+length]    \n",
+        "    train_df['antecedent'][ind] = text[mindex:pindex+length]    \n",
         "  except ValueError:\n",
         "    print(mindex,pindex,length)\n",
         "\n",
         "  sleep(1)\n",
         "\n",
-        "test_df.to_csv(prefix+'test.tsv', sep='\\t', index=False, header=False)\n"
+        "train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -478,7 +457,7 @@
         "colab": {}
       },
       "source": [
-        "!mv /content/test.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
+        "!mv /content/train.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
       ],
       "execution_count": 0,
       "outputs": []
