Added Verb Phrase extraction
Added VB tag to (past)antecedent  phrase list

--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -63,6 +63,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "A9ynYc1VmEXn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install tqdm"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "c4DctzKMLVOx",
         "colab_type": "code",
         "colab": {}
@@ -101,6 +114,7 @@
         "    modal= list() # only the modal phrases\n",
         "    past = list() # only the past phrases\n",
         "    noun = list()\n",
+        "    verb = list()\n",
         "\n",
         "    def extract(obj, arr):\n",
         "        \n",
@@ -113,13 +127,7 @@
         "                    arr.append(v)\n",
         "                elif k=='nodeType' and v=='MD':\n",
         "                    arr.append(v)\n",
-        "                elif k=='nodeType' and v=='VBD': # Verb, past tense\n",
-        "                    arr.append(v)\n",
-        "                elif k=='nodeType' and v=='VBN': # Verb, past participle\n",
-        "                    arr.append(v)\n",
-        "                elif k=='nodeType' and v=='RB': # Adverb (eg \"Even\" if past...)  \n",
-        "                    arr.append(v)\n",
-        "                elif k=='nodeType' and v=='IN':  # Preposition or conjunction (eg \"if\")\n",
+        "                elif k=='nodeType' and v=='VP':    \n",
         "                    arr.append(v)\n",
         "\n",
         "        elif isinstance(obj, list):\n",
@@ -133,21 +141,10 @@
         "                  elif 'NP' in arr: \n",
         "                    arr.remove('NP')\n",
         "                    noun.append(obj)  \n",
-        "                  elif 'VBD' in arr: \n",
-        "                    arr.remove('VBD')\n",
-        "                    past.append(obj) \n",
-        "                  elif 'VBD' in arr: \n",
-        "                    arr.remove('VBN')\n",
-        "                    past.append(obj)\n",
-        "                  elif 'RB' in arr: \n",
-        "                    arr.remove('RB')\n",
-        "                    if 'even' in obj[0]['word'].lower():\n",
-        "                      past.append(obj)\n",
-        "                  elif 'IN' in arr: \n",
-        "                     arr.remove('IN')   \n",
-        "                     if 'if' in obj[0]['word'].lower():  \n",
-        "                       past.append(obj)\n",
-        "                      #print(obj)\n",
+        "                  elif 'VP' in arr:\n",
+        "                    arr.remove('VP')\n",
+        "                    verb.append(obj)\n",
+        "                    past.append(obj) # this is hack!\n",
         "     \n",
         "              #arr.append(item) # uncomment for the full set\n",
         "              #print(item)\n",
@@ -158,7 +155,7 @@
         "\n",
         "    results = extract(obj, arr)\n",
         "\n",
-        "    return modal, past, noun # result"
+        "    return modal, past, noun, verb # result"
       ],
       "execution_count": 0,
       "outputs": []
@@ -219,12 +216,18 @@
         "        for key, value in value.items():\n",
         "          if (key == 'children'):\n",
         "\n",
-        "            mod, pas, nou = extract_modal(value)\n",
+        "            mod, pas, nou, ver = extract_modal(value)\n",
         "            \n",
         "            for u in nou:\n",
         "              nu = simplify(u) \n",
         "              if nu not in nouns:\n",
         "                nouns.append(nu) \n",
+        "\n",
+        "            if len(mod)==0:\n",
+        "              for p in pas:\n",
+        "                pa = simplify(p)\n",
+        "                if pa not in past:\n",
+        "                   past.append(pa) \n",
         "\n",
         "            for m in mod:\n",
         "              md = simplify(m) # string gist\n",
@@ -241,20 +244,22 @@
         "                     md = md.replace(pa,'')   \n",
         "                if md in pa and len(pa) > len(md):\n",
         "                   if pa.index(md) == 0 :\n",
-        "                     pa = pa.replace(md,'')  \n",
+        "                     pa = pa.replace(md,'') \n",
+        "\n",
         "                for np in reversed(sorted(nounp,key=len)):\n",
         "                  if np in pa and len(pa) > len(np): \n",
         "                    if pa.index(np) > 0 :\n",
         "                      pa = pa[0:pa.index(np)]\n",
         "                    else:\n",
-        "                      pa = str(pa).replace(str(np),'')  \n",
+        "                      pa = pa.replace(np,'')  \n",
         "                    nounp.append(np)\n",
         "                    nouns.remove(np)\n",
+        "\n",
         "                if md in pa: # and len(pa) > len(md): # dont uncomment!\n",
         "                   if pa.index(md) > 0 :\n",
         "                     pa = pa[0:pa.index(md)]  \n",
         "                   else:\n",
-        "                     pa = str(pa).replace(str(md),'')      \n",
+        "                     pa = pa.replace(md,'')      \n",
         "                \n",
         "                if pa not in past:\n",
         "                  past.append(pa) \n",
@@ -317,7 +322,7 @@
         "import nltk\n",
         "nltk.download('punkt')\n",
         "\n",
-        "text = \"These distortions have seen one party or the other get shut out of general elections in recent years, including in contrains they likely would have won if the parties had gotten to nominate a single candidate each.\"\n",
+        "text = \"Thanks for the article on this new term that fits me so well, wish all your articles were worthy of praise.\"\n",
         "text.replace('\\\"','\\'')\n",
         "#print(text)\n",
         "\n",
@@ -438,11 +443,12 @@
         "        if mindex > text.index(n):\n",
         "          mindex = text.index(n)\n",
         "        \n",
-        "    train_df['antecedent'][ind] = text[mindex:pindex+length]    \n",
-        "  except ValueError:\n",
-        "    print(mindex,pindex,length)\n",
+        "    train_df['antecedent'][ind] = text[mindex:pindex+length] \n",
         "\n",
-        "  sleep(1)\n",
+        "    sleep(1)  \n",
+        "  except ValueError:\n",
+        "    #print(mindex,pindex,length)\n",
+        "    sleep(1)\n",
         "\n",
         "train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n"
       ],
