Added simplified sentence digest

--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -24,7 +24,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
-        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/train.csv /content\n",
+        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/train.csv /content\n",
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/test.csv /content"
       ],
       "execution_count": 0,
@@ -402,11 +402,7 @@
       "metadata": {
         "id": "tHIQLmP3AnyF",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 88
-        },
-        "outputId": "c572c634-879f-4d25-e3a5-e62c1b4649ee"
+        "colab": {}
       },
       "source": [
         "import nltk\n",
@@ -435,6 +431,7 @@
         "j = 0\n",
         "modal_df= pd.DataFrame(columns=['id','labels','text'])\n",
         "past_df = pd.DataFrame(columns=['id','labels','text'])\n",
+        "simple_df = pd.DataFrame(columns=['id','labels','text'])\n",
         "\n",
         "for ind in tqdm(test_df.index): \n",
         "  original = test_df['text'][ind]\n",
@@ -540,7 +537,14 @@
         "    'labels':'1', # gold label\n",
         "    'text': test_df['text'][ind]\n",
         "  }, name = str(i) )\n",
-        "  modal_df = modal_df.append(m_row)  \n",
+        "  modal_df = modal_df.append(m_row)\n",
+        "\n",
+        "  s_row = pd.Series(data={\n",
+        "    'id': test_df['id'][ind],\n",
+        "    'labels':'0',\n",
+        "    'text': test_df['text'][ind]\n",
+        "  }, name = str(i) )\n",
+        "  simple_df = simple_df.append(s_row)   \n",
         "  i = i+1\n",
         "\n",
         "  p_row = pd.Series(data={\n",
@@ -550,57 +554,42 @@
         "  }, name = str(j) )\n",
         "  past_df = past_df.append(p_row)  \n",
         "  j = j+1\n",
-        "\n",
-        "\n",
-        "  for m in modal:\n",
-        "    m_row = pd.Series(data={\n",
-        "      'id': test_df['id'][ind]+'A'+ str(i),\n",
-        "      'labels':'0',\n",
-        "      'text': m\n",
-        "    }, name = str(i) )\n",
-        "    modal_df = modal_df.append(m_row)  \n",
-        "    i = i+1\n",
         "    \n",
+        "\n",
         "  for p in past:\n",
         "    p_row = pd.Series(data={\n",
-        "      'id': test_df['id'][ind]+'C'+ str(j),\n",
+        "      'id': test_df['id'][ind]+'A'+ str(j),\n",
         "      'labels':'0',\n",
         "      'text': p\n",
         "    }, name = str(j) )\n",
-        "    past_df = past_df.append(p_row)  \n",
+        "    past_df = past_df.append(p_row)   \n",
         "    j = j+1\n",
+        "\n",
+        "    for m in modal:\n",
+        "      m_row = pd.Series(data={\n",
+        "        'id': test_df['id'][ind]+'C'+ str(i),\n",
+        "        'labels':'0',\n",
+        "        'text': m\n",
+        "      }, name = str(i) )\n",
+        "      modal_df = modal_df.append(m_row)\n",
+        "\n",
+        "      s_row = pd.Series(data={\n",
+        "        'id': test_df['id'][ind]+'A'+ str(j) + 'C'+ str(i),\n",
+        "        'labels':'0',\n",
+        "        'text': p +' '+ m\n",
+        "      }, name = str(i) )\n",
+        "      simple_df = simple_df.append(s_row) \n",
+        "\n",
+        "      i = i+1\n",
         "\n",
         "  sleep(1)  \n",
         "\n",
         "past_df.to_csv(prefix+'antecedents.tsv', sep='\\t', index=False, header=False)\n",
-        "modal_df.to_csv(prefix+'consequents.tsv', sep='\\t', index=False, header=False)"
+        "modal_df.to_csv(prefix+'consequents.tsv', sep='\\t', index=False, header=False)\n",
+        "simple_df.to_csv(prefix+'simplified.tsv', sep='\\t', index=False, header=False)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\r  0%|          | 0/1950 [00:00<?, ?it/s]"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "1950\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\r  0%|          | 1/1950 [00:01<1:00:43,  1.87s/it]"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -611,7 +600,8 @@
       },
       "source": [
         "!mv /content/antecedents.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/\n",
-        "!mv /content/consequents.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
+        "!mv /content/consequents.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/\n",
+        "!mv /content/simplified.tsv /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
       ],
       "execution_count": 0,
       "outputs": []
